<!--
  ~ Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mindorks.com/license/apache-v2
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<resources>
    <string name="app_name">SurveyApp</string>

    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="login_dummy">Login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--Login Validation-->
    <string name="empty_email">Please provide a non empty email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>

    <!--about fragment-->
    <string name="project_info">This sample app implements MVP architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvp_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>

    <string name="info_err">Informations erronées</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--domain strings -->
    <string name="surveys">Surveys</string>
    <string name="party_name">Party Name</string>

    <string name="citizen_info">Citizen Information</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="soc_level">Social level</string>
    <string name="educ_level">Educational level</string>
    <string name="profession">Profession</string>
    <string name="region">Region</string>
    <string name="locality">Locality</string>


    <string-array name="soc_level_array">
        <item>Poor</item>
        <item>Well-off</item>
        <item>Average</item>

    </string-array>

    <string-array name="educ_level_array">
        <item>Primary</item>
        <item>Secondary</item>
        <item>Higher</item>

    </string-array>

    <string-array name="region_array">
        <item>Ariana</item>
        <item>Béja</item>
        <item>Ben Arous</item>
        <item>Bizerte</item>
        <item>Gabès</item>
        <item>Gafsa</item>
        <item>Jendouba</item>
        <item>Kairouan</item>
        <item>Kasserine</item>
        <item>Kébili</item>
        <item>Le Kef</item>
        <item>Mahdia</item>
        <item>La Manouba</item>
        <item>Médenine</item>
        <item>Monastir</item>
        <item>Nabeul</item>
        <item>Sfax</item>
        <item>Sidi Bouzid</item>
        <item>Siliana</item>
        <item>Sousse</item>
        <item>Tataouine</item>
        <item>Tozeur</item>
        <item>Tunis</item>
        <item>Zaghouan</item>



    </string-array>


    <string name="info_errLoadingSurveys">Can not load surveys</string>

    <!--wizard-->
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Submit survey</string>


    <string name="submit_confirm_message">Good job! So, would you submit your responses?</string>
    <string name="submit_confirm_button">Yes</string>

    <string name="label_your_name">Name</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_email">Optional</string>

    <string name="review">Review</string>

    <string name="geo_status_searching">Waiting GPS &#8230;</string>
    <string name="geo_status_found">Location found</string>
    <string name="geo_status_location">%1$s \n(%2$s)</string>

    <string-array name="image_photo_sources">
        <item>Pick from gallery</item>
        <item>Capture new photo</item>
    </string-array>

</resources>
